--- a/app/assets/stylesheets/styleguide/styleguide.scss
+++ b/app/assets/stylesheets/styleguide/styleguide.scss
@@ -17,4 +17,4 @@ Style Guide stylesheet
   @import "../partials/utils/placeholders/bottom-spacing";
 
 /* Style guide */
-@import "styleguide";
+@import "main";
