--- a/app/views/styleguides/abstractions/_horizontal_list.html.erb
+++ b/app/views/styleguides/abstractions/_horizontal_list.html.erb
@@ -1,4 +1,4 @@
-<%= styleguide_block 'Horizontal List' do %>
+<%= styleguide_block 'Horizontal List' do |style| %>
   <ul class="horiz-list $modifier_class">
       <li><a href="#">Semper</a></li><!--
     --><li><a href="#">Virtute</a></li><!--
