--- a/app/views/styleguides/abstractions/_slats.html.erb
+++ b/app/views/styleguides/abstractions/_slats.html.erb
@@ -1,5 +1,5 @@
 <!-- Slats -->
-<%= styleguide_block 'Slats' do %>
+<%= styleguide_block 'Slats' do |style| %>
   <div class="sg-h3">Small</div>
   <div class="slats">
     <img src="http://placekitten.com/60/60" alt="" class="slats__img">
