--- a/app/views/styleguides/abstractions/_toggle_content.html.erb
+++ b/app/views/styleguides/abstractions/_toggle_content.html.erb
@@ -1,4 +1,4 @@
-<%= styleguide_block 'Toggle Content' do %>
+<%= styleguide_block 'Toggle Content' do |style| %>
   <div class="island toggle-content js-toggle-content">
     <p>Content that gets toggled</p>
   </div>
