--- a/app/views/styleguides/abstractions/_vertical_alignment.html.erb
+++ b/app/views/styleguides/abstractions/_vertical_alignment.html.erb
@@ -1,4 +1,4 @@
-<%= styleguide_block 'Vertical Alignment' do %>
+<%= styleguide_block 'Vertical Alignment' do |style| %>
   <div style="height: 200px">
       <div class="vert-align $modifier_class">
         <div class="vert-align__inner">
