--- a/app/views/styleguides/buttons/_menu.erb
+++ b/app/views/styleguides/buttons/_menu.erb
@@ -1,4 +1,4 @@
-<%= styleguide_block 'Menu' do %>
+<%= styleguide_block 'Menu' do |style| %>
 <button type="button" class="btn btn--menu">
   <span class="hide-visually">Show menu</span>
   <span class="btn--menu__icon"></span>
