--- a/app/views/styleguides/buttons/_expand_collapse.erb
+++ b/app/views/styleguides/buttons/_expand_collapse.erb
@@ -1,3 +1,3 @@
-<%= styleguide_block 'Expand/Collapse' do %>
-<p><button type="button" class="btn btn--full btn--expand-collapse">Button (button) <span aria-hidden="true" class="icon icon--arrow-down-full icon--lrg"></span></button></p>
+<%= styleguide_block 'Expand/Collapse' do |style| %>
+<button type="button" class="btn btn--full btn--expand-collapse">Button (button) <span aria-hidden="true" class="icon icon--arrow-down-full icon--lrg"></span></button>
 <% end %>
