--- a/app/views/styleguides/buttons/_site_feedback.html.erb
+++ b/app/views/styleguides/buttons/_site_feedback.html.erb
@@ -1,4 +1,4 @@
-<%= styleguide_block 'Site Feedback' do %>
+<%= styleguide_block 'Site Feedback' do |style| %>
 <button type="button" class="btn btn--site-feedback js-btn-site-feedback">
   <span class="icon icon--megaphone icon--xlrg icon--flush-top" aria-hidden="true"></span><!--
   --><span class="btn--site-feedback__lbl">Give&nbsp;feedback</span>
