--- a/app/views/styleguides/default-element-styles-typography.html.erb
+++ b/app/views/styleguides/default-element-styles-typography.html.erb
@@ -2,13 +2,18 @@
 <div class="sg-note sg-note--outdent">All default elements e.g. paragraphs, links, headings, images, etc. are given base styles that define how the element should look in all occurrences on the page. Base styles include setting heading sizes, default link styles, default font styles, etc. This page shows all the default elements concerned with <span class="pt-sans-narrow-bold">typography</span>.</div>
 
 <!-- Headings -->
-<%= styleguide_block 'Headings' do %>
+<%= styleguide_example 'Headings', 'Use them everywhere!' do %>
 <h1>Heading 1</h1>
+<h2>Heading 2</h2>
+<h3>Heading 3</h3>
+<h4>Heading 4</h4>
+<h5>Heading 5</h5>
+<h6>Heading 6</h6>
 <% end %>
 <!-- //Headings -->
 
 <!-- Paragraphs -->
-<%= styleguide_block 'Paragraphs' do %>
+<%= styleguide_example 'Paragraphs' do %>
 <p>Nec at quodsi elaboraret definitionem. Ne facilisi pericula honestatis qui. In sanctus platonem voluptatum ius. Ad sed labores inermis disputando, etiam adversarium quo te. Eu vis nostrud deseruisse, est possit iracundia no, has an ferri meliore nusquam. Semper apeirian pericula eos id. Error graeci graecis sed no, quo ex hinc justo pertinax. Pro nostro placerat ex, id tamquam sadipscing vim, te tota errem audiam duo. Vim scripta recusabo elaboraret eu, sea periculis iracundia repudiandae ea, has duis modus persequeris in.</p>
 <p>Ne mel utroque apeirian, eum ex cibo choro. Discere commune concludaturque eum te, eros movet comprehensam eum id. Cu nulla salutatus duo. Phaedrum efficiantur vix at, ius ancillae reprimique in, percipit mandamus assueverit eu eum. Alia natum vidisse id ius, vide soleat vis no.</p>
 <% end %>
