--- a/app/assets/stylesheets/partials/abstractions/_toggle-content.scss
+++ b/app/assets/stylesheets/partials/abstractions/_toggle-content.scss
@@ -4,7 +4,9 @@
 
 /*
   Simply expands/collapses some content via jQuery.
-  This uses the `jquery.toggle-content.js`. You can specify the content of the the toggle content button by passing in value into the `btnTxtOpen` and `btnTxtClose` parameters.
+
+  .toggle-content--btn-center     - Center align
+  .toggle-content--btn-mrg-base   - Apply base bottom margin
 
   Styleguide Toggle Content
 */
