--- a/app/assets/stylesheets/partials/buttons/_menu.scss
+++ b/app/assets/stylesheets/partials/buttons/_menu.scss
@@ -3,7 +3,7 @@
    ====================================================================================== */
 
 /*
-	Menu (hamburger) button.
+	Menu (hamburger).
 
 	Styleguide Menu
 */
