--- a/app/views/styleguides/buttons.html.erb
+++ b/app/views/styleguides/buttons.html.erb
@@ -1,11 +1,11 @@
 <div class="sg-section">
   <div class="sg-h1">Buttons</div>
-  <div class="sg-note">All of the different button styles</div>
+  <div class="box island">All of the different button styles</div>
 </div>
 
-<%= render 'styleguides/buttons/main' %>
-
 <%= render 'styleguides/buttons/base' %>
+
+<%= render 'styleguides/buttons/main' %>
 
 <%= render 'styleguides/buttons/faux_link' %>
 
