--- a/app/views/styleguides/buttons/_faux_link.erb
+++ b/app/views/styleguides/buttons/_faux_link.erb
@@ -1,4 +1,4 @@
 <%= styleguide_block 'Faux Link' do |style| %>
-<div class="sg-sub-section"><button type="button" class="btn btn--faux-link $modifier_class">Button (button)</button></div>
-<div class="sg-sub-section"><a href="#" class="btn btn--faux-link $modifier_class">Button (anchor)</a></div>
+<button type="button" class="btn btn--faux-link $modifier_class">Button (button)</button>
+<a href="#" class="btn btn--faux-link $modifier_class">Button (anchor)</a>
 <% end %>
