--- a/app/assets/stylesheets/partials/buttons/_main.scss
+++ b/app/assets/stylesheets/partials/buttons/_main.scss
@@ -10,8 +10,9 @@
   .btn--main-light            - Light
   .btn--main-white            - White
   .btn--main-compact          - Compact - decrease padding
-  .btn--main-lrg              - Large - increase top/btm padding
+  .btn--main-lrg              - Large - increase top/bottom padding
   .btn--main-checkbox-toggle  - Checkbox toggle
+  .btn--main-checkbox-toggle.btn--main-checkbox-toggle-icon  - When an icon is used within the checkbox toggle
 
   Styleguide Button Main
 */
