--- a/app/assets/stylesheets/styleguide/_main.scss
+++ b/app/assets/stylesheets/styleguide/_main.scss
@@ -18,174 +18,179 @@
 
   /* Menu (hamburger) toggle button */
   .btn--menu {
-    @include to-rem(width, 42);
-    @include to-rem(height, 38);
-
     @include respond-min(770) {
       display: none;
     }
   }
+
+    /* The three lines in icon */
+    .btn--menu__icon {
+      &,
+      &:before,
+      &:after {
+        background-color: $color-grey-med-2;
+      }
+    }
 }
 
-/* Main nav container */
-.sg-header__primary {
-  background-color: $color-txt-dark;
+  /* Main nav container */
+  .sg-header__primary {
+    background-color: $color-txt-dark;
 
-  .container {
-    width: 100%;
-
-    @include respond-min(770) {
-      width: $page-container-width;
-    }
-  }
-
-  /* Main nav */
-  .horiz-list {
-    float: none;
-    display: none;
-    border-width: 1px 0;
-    @include to-rem(max-height, 200);
-    overflow-y: scroll;
-    -webkit-overflow-scrolling: touch;
-
-   /* Show the drop down for 'Angular Toggle Visibility Directive' */
-    &.is-active {display: block;}
-
-    @include respond-min(770) {
-      display: table;
-      width: 100%;
-      border-width: 0 1px;
-    }
-
-    &,
-    li {
-      border-style: solid;
-      border-color: $color-txt-base;
-    }
-
-    /* Nav items */
-    li {
-      width: 100%;
-      margin: 0;
-      padding: 0;
-      border-width: 1px 0 0;
-
-      &:first-child {border: 0;}
-
+    .container {
       @include respond-min(770) {
-        display: table-cell;
-        vertical-align: middle;
-        width: auto;
-        text-align: center;
-        border-width: 0 0 0 1px;
+        width: $page-container-width;
       }
     }
 
-      a {
-        display: block;
-        color: $color-grey-med-2;
-        @include to-rem(padding, $spacing-third $spacing-half);
+    /* Main nav */
+    .sg-menu-main {
+      display: none;
+      border-width: 1px 0;
+      @include to-rem(max-height, $drop-down-max-height);
 
-        &:hover,
-        &:focus {color: #fff;}
+      /* Touch device */
+      .touch & {
+        overflow-y: scroll;
+        -webkit-overflow-scrolling: touch;
       }
-  }
-}
 
-.sg-header__secondary {
-  background-color: #fff;
-  @include to-rem(min-height, 44);
+     /* Show the drop down for 'Angular Toggle Visibility Directive' */
+      &.is-active {display: block;}
 
-  /* Inner container */
-  > .container {
-    @include to-rem(padding-top padding-bottom, 7);
+      /* Set main nav to be horizontal at this breakpoint */
+      @include respond-min(770) {
+        display: table;
+        width: 100%;
+        border-width: 0 1px;
+      }
 
-    @include respond-min($non-palm) {
-      @include to-rem(padding-top, 10);
+      &,
+      li {
+        border-style: solid;
+        border-color: $color-txt-base;
+      }
+
+      /* Nav items */
+      li {
+        border-top-width: 1px;
+
+        &:first-child {border-top: 0;}
+
+        @include respond-min(770) {
+          display: table-cell;
+          vertical-align: middle;
+          text-align: center;
+          border-width: 0 0 0 1px;
+        }
+      }
+
+        a {
+          display: block;
+          color: $color-grey-med-2;
+          @include to-rem(padding, $spacing-third $spacing-half);
+
+          &:hover,
+          &:focus {color: #fff;}
+        }
     }
   }
-}
 
-/* [CONTENT WRAPPER]
+  .sg-header__secondary {
+    background-color: #fff;
+    @include to-rem(min-height, 44);
+
+    /* Inner container */
+    > .container {
+      @include to-rem(padding-top padding-bottom, 7);
+
+      @include respond-min($non-palm) {
+        @include to-rem(padding-top, 10);
+      }
+    }
+  }
+
+/* [CONTENT]
 -------------------------------------------------------*/
-.sg-content-wrapper .container {
+
+.sg-content {
   @include to-rem(margin-bottom, $spacing-dbl);
   @extend %clear-fix;
 }
 
-/* [MAIN]
--------------------------------------------------------*/
-.sg-main {
-  @include respond-min(770) {
-    display: table-cell;
-    width: 10000px;
-  }
-}
-
-/* [ASIDE]
--------------------------------------------------------*/
-.sg-aside {
-  @include respond-min(770) {
-    float: left;
-    width: 300px;
-    max-height: 200px;
-    @include to-rem(padding-right, $spacing-dbl);
-
+  /* Main */
+  .sg-main {
+    /* Allows the main content area to be fluid while the aside is fixed width */
     @include respond-min(770) {
-      max-height: none;
+      display: table-cell;
+      width: 10000px;
     }
   }
 
-  /* Nav */
-  ul {
-    overflow-y: auto;
-    max-height: 190px;
-    @include to-rem(padding, $spacing-half);
-    @include to-rem(margin-bottom, $spacing-base);
-    background: #42444d;
-
+  /* Aside */
+  .sg-aside {
     @include respond-min(770) {
-      max-height: none;
+      float: left;
+      width: 300px;
+      max-height: 200px;
+      @include to-rem(padding-right, $spacing-dbl);
+
+      @include respond-min(770) {
+        max-height: none;
+      }
     }
-  }
 
-    li {
-      margin-top: 2px;
-      color: #073642;
+    /* Nav */
+    ul {
+      overflow-y: auto;
+      max-height: 190px;
+      @include to-rem(padding, $spacing-half);
+      @include to-rem(margin-bottom, $spacing-base);
+      background: #42444d;
 
-      &:first-child {margin: 0;}
+      @include respond-min(770) {
+        max-height: none;
+      }
+    }
 
-        /* Links */
-        span,
-        a {
-          display: block;
-          padding: 3px 6px;
-        }
+      li {
+        margin-top: 2px;
+        color: #073642;
 
-        a {
-          color: $color-blue;
+        &:first-child {margin: 0;}
 
-          &:before {
-            content: "⇢";
-            display: inline-block;
-            font: normal 16px/.7 "Arial Unicode MS Regular", "Arial Unicode MS", Arial, Helvetica, sans-serif;
-            vertical-align: text-top;
-            margin-right: 6px;
+          /* Links */
+          span,
+          a {
+            display: block;
+            padding: 3px 6px;
           }
 
-          &:hover,
-          &.active {color: #fff;}
-        }
-    }
+          a {
+            color: $color-blue;
+
+            &:before {
+              content: "⇢";
+              display: inline-block;
+              font: normal 16px/.7 "Arial Unicode MS Regular", "Arial Unicode MS", Arial, Helvetica, sans-serif;
+              vertical-align: text-top;
+              margin-right: 6px;
+            }
+
+            &:hover,
+            &.active {color: #fff;}
+          }
+      }
 }
 
 /* ======================================================================================
    @HEADINGS
    ====================================================================================== */
 .sg-h1 {
-  font-family: $font-family-opensans;
   @include to-rem(margin-bottom, $spacing-half);
-  @include font-size(30);}
+  font-family: $font-family-opensans;
+  @include font-size(30);
+}
 
 .sg-h2 {
   @include to-rem(margin-bottom, $spacing-half);
@@ -211,37 +216,27 @@
 .sg-section {
   @include to-rem(margin-bottom, $spacing-dbl);
 
-  > p {@include to-rem(margin-bottom, $spacing-base);}
+  &:last-child {margin-bottom: 0;}
 }
 
-.sg-sub-section {
-  @include to-rem(margin-bottom, $spacing-base);
-}
-
-/* [NOTE]
--------------------------------------------------------*/
-.sg-note {
-  @include to-rem(padding, $spacing-half);
-  background-color: #fff;
-  box-shadow: $box-shadow-heavy;
-  @extend %mrg-base;
-
-  @include respond-min($non-palm) {
-    @include to-rem(padding, $spacing-base);
+  /* Description of section */
+  .sg-section__desc {
+    &,
+    p {@extend %mrg-base;}
   }
-}
+
+  /* Sub section */
+  .sg-section-sub {@include to-rem(margin-bottom, $spacing-base);}
 
 /* [EXAMPLE]
 -------------------------------------------------------*/
-.sg-example {
-  margin-bottom: 25px;
-}
+.sg-example {@extend %mrg-base;}
 
 /* [MODIFIER]
 -------------------------------------------------------*/
 .sg-modifier {
   position: relative;
-  padding-top: 35px;
+  @include to-rem(padding-top, 35);
   border-top: 1px solid $color-grey-med-1;
 }
 
@@ -249,7 +244,7 @@
     position: absolute;
     top: 0;
     right: 0;
-    padding: 2px 5px;
+    @include to-rem(padding, 2 5);
     background-color: $color-green;
     color: #fff;
   }
@@ -257,15 +252,10 @@
 /* [CODE]
 -------------------------------------------------------*/
 .sg-code-block {
-  padding: 1px 6px;
+  @include to-rem(padding, 1 6);
   background-color: #f8f8f8;
   border: 1px solid #ccc;
   border-radius: 4px;
-  word-wrap: break-word !important;
-  -ms-word-break: break-all !important;
-  word-break: break-all !important;
-  /* Non standard for webkit */
-  word-break: break-word !important;
 }
 
 /* Override style from prism.css. This is to stop the main content area from getting too wide */
@@ -273,24 +263,23 @@ code[class*="language-"], pre[class*="language-"] {
   white-space: pre-wrap;
 }
 
-
 /* [TABLE]
 -------------------------------------------------------*/
 .sg-table {
-  th,
-  td {padding: 10px 20px;}
-
   /* Cells */
   th,
   td {
-    border: 1px solid $color-grey-med-3;
-
-    /* No borders for empty cells */
-    &:empty {border: 0;}
+    border-color: $color-grey-med-3;
   }
-
-  /* Thicker border for the last row in the `thead` */
-  thead tr:last-child th {border-bottom-width: 2px;}
 }
 
-  .sg-table__class {width: 40%;}
+/* [OVERRIDES]
+-------------------------------------------------------*/
+/* Turn off site feedback button */
+.styleguides .btn--site-feedback {display: none;}
+
+/* Force feedback button to show in example */
+.sg-section .btn--site-feedback {
+  display: block;
+  position: static;
+}
