--- a/app/views/styleguides/abstractions.html.erb
+++ b/app/views/styleguides/abstractions.html.erb
@@ -1,6 +1,6 @@
 <div class="sg-section">
   <div class="sg-h1">Abstractions</div>
-  <div class="sg-note">An abstraction is a CSS methodology that basically removes a pattern from a specific idea and makes a more generic idea out of it e.g. make a list render horizontally. They exist to avoid writing the same similar patterns over and over, instead create a single more generic representation of those patterns and reuse that instead.</div>
+  <div class="box island">An abstraction is a CSS methodology that basically removes a pattern from a specific idea and makes a more generic idea out of it e.g. make a list render horizontally. They exist to avoid writing the same similar patterns over and over, instead create a single more generic representation of those patterns and reuse that instead.</div>
 </div>
 
 <%= render 'styleguides/abstractions/horizontal_list' %>
