--- a/app/views/styleguides/base/_typography.html.erb
+++ b/app/views/styleguides/base/_typography.html.erb
@@ -1,17 +1,13 @@
 <%= styleguide_block 'Headings' do %>
-  <h1>h1.Heading 1</h1>
+  <h1>Heading 1</h1>
 
-  <h2>h2.Heading 2</h2>
+  <h2>Heading 2</h2>
 
-  <h3>h3.Heading 3</h3>
+  <h3>Heading 3</h3>
 
-  <h4>h4.Heading 4</h4>
+  <h4>Heading 4</h4>
 
-  <h5>h5.Heading 5</h5>
+  <h5>Heading 5</h5>
 
-  <h6>h6.Heading 6</h6>
-
-  <% example '.h1' do %>
-    <h2 class="$modifier_class">Heading 2 that looks like Heading 1</h2>
-  <% end %>
+  <h6>Heading 6</h6>
 <% end %>
