--- a/app/views/styleguides/buttons/_base.html.erb
+++ b/app/views/styleguides/buttons/_base.html.erb
@@ -1,21 +1,21 @@
-<%= styleguide_block 'Button Base' do |style| %>
-  <div class="sg-sub-section"><button type="button" class="btn btn--main $modifier_class">Button (button)</button></div>
+<%= styleguide_block 'Base' do |style| %>
+  <button type="button" class="btn btn--main $modifier_class">Button (button)</button>
 
-  <div class="sg-sub-section"><a href="#" class="btn btn--main $modifier_class">Button (anchor)</a></div>
+  <a href="#" class="btn btn--main $modifier_class">Button (anchor)</a>
 
   <%# btn--pointer %>
   <% example '.btn--pointer' do %>
-    <div class="sg-sub-section"><button type="button" class="btn btn--main $modifier_class">Button (button)<span aria-hidden="true" class="icon icon--lrg icon--arrow-down-full btn--pointer__icon"></span></button></div>
+    <button type="button" class="btn btn--main $modifier_class">Button (button)<span aria-hidden="true" class="icon icon--lrg icon--arrow-down-full btn--pointer__icon"></span></button>
 
-    <div class="sg-sub-section"><a href="#" class="btn btn--main $modifier_class">Button (anchor)<span aria-hidden="true" class="icon icon--lrg icon--arrow-down-full btn--pointer__icon"></span></a></div>
+    <a href="#" class="btn btn--main $modifier_class">Button (anchor)<span aria-hidden="true" class="icon icon--lrg icon--arrow-down-full btn--pointer__icon"></span></a>
   <% end %>
   <%# //btn--pointer %>
 
   <%# btn--pointer-alt %>
   <% example '.btn--pointer-alt' do %>
-    <div class="sg-sub-section"><button type="button" class="btn btn--main btn--main-alt4 btn--pointer $modifier_class"><span class="icon icon--arrow-left-big btn--pointer__icon btn--pointer__icon--flush" aria-hidden="true"></span>Button (button)</button></div>
+    <button type="button" class="btn btn--main btn--pointer $modifier_class"><span class="icon icon--arrow-left-big btn--pointer__icon btn--pointer__icon--flush" aria-hidden="true"></span>Button (button)</button>
 
-    <div class="sg-sub-section"><a href="#" class="btn btn--main btn--main-alt4 btn--pointer $modifier_class"><span class="icon icon--arrow-left-big btn--pointer__icon btn--pointer__icon--flush" aria-hidden="true"></span>Button (anchor)</a></div>
+    <a href="#" class="btn btn--main btn--pointer $modifier_class"><span class="icon icon--arrow-left-big btn--pointer__icon btn--pointer__icon--flush" aria-hidden="true"></span>Button (anchor)</a>
   <% end %>
   <%# //btn--pointer-alt %>
 <% end %>
