--- a/app/assets/stylesheets/styleguide/styleguide.scss
+++ b/app/assets/stylesheets/styleguide/styleguide.scss
@@ -1,11 +1,13 @@
 /*
-
-Style Guide stylesheet
-
-  Note:
-    All class names need to be prefixed with `sg-` so they're isolated to the 'Style
-    Guide' pages only and don't conflict with the project styles.
-
+ * Style Guide stylesheet
+ *
+ *
+ * Note:
+ *  All class names need to be prefixed with `sg-` so they're isolated to the 'Style
+ *  Guide' pages only and don't conflict with the project styles.
+ *
+ * application.css is imported via Base layout template
+======================================================================================
 */
 
 /* Utils */
